<?xml version="1.0"?>
<package>
  <name>agvs_common</name>
  <version>0.1.0</version>
  <description>URDF description of the Agvs and Agvs.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/avgs_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/avgs_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>avgs_description</run_depend>
  <run_depend>avgs_pad</run_depend>

  <export>
  </export>
</package>
