<?xml version="1.0"?>
<package>
  <name>agvs_common</name>
  <version>0.1.3</version>
  <description>URDF description of the Agvs and Agvs.</description>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/agvs_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/agvs_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzm치n</author>
  <author email="rnavarro@robotnik.es">Rom치n Navarro</author>
  
  <maintainer email="rguzman@robotnik.es">Roberto Guzm치n</maintainer>
  <maintainer email="rnavarro@robotnik.es">Rom치n Navarro</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agvs_description</run_depend>
  <run_depend>agvs_pad</run_depend>

  <export><metapackage/></export>
</package>
